--- a/index.html
+++ b/index.html
@@ -19,9 +19,30 @@ and open the template in the editor.
         <script type="text/javascript" src="js/lib/topojson.min.js" charset="utf-8"></script>
     </head>
     <body>
-        <div class="menu">
-            <!--div></div-->
+        <div class="geo-menu">
         </div>
+
+        <div style="padding: 10px">
+            <div style="margin: 10px">
+                Zobraz IP adresy: <span id="test-div-radio-display"></span>
+            </div>
+            <div style="margin: 10px">
+                Přiřaď unknown: <span id="test-btn-assignUnknown"></span>
+            </div>
+            <div style="margin: 10px">
+                Univerzální zobrazení: <span id="test-btn-defaultDisplay"></span>
+            </div>
+            <div style="margin: 10px">
+                Typ útoků: <span id="test-div-checkbox-attackType"></span>
+            </div>
+            <div style="margin: 10px">
+                Zobraz jména států: <span id="test-div-checkbox-showLabel"></span>
+            </div>
+
+        </div>
+        <script type="text/javascript" src="js/test.js"></script>
+
+
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
