--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@ and open the template in the editor.
         <link href="images/favicon.png" rel="icon" type="image/png" />
         <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/menu.css">
+        <link rel="stylesheet" href="js/lib/jquery-ui-1.11.4.custom/jquery-ui.css">
 
         <script type="text/javascript" src="js/lib/jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="js/lib/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/lib/d3.v3.min.js" charset="utf-8"></script>
         <script type="text/javascript" src="js/lib/topojson.min.js" charset="utf-8"></script>
+        <script type="text/javascript" src="js/menu.js"></script>
     </head>
     <body>
-        <div class="geo-menu">
+        <div id="geo-menu">
         </div>
 
         <div style="padding: 10px">
