--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="js/lib/jquery-ui-1.11.4.custom/jquery-ui.css">
 
         <script type="text/javascript" src="js/lib/jquery-1.11.3.min.js"></script>
+        <!-- I need 2.2.1  in order to make my custom events work -->
         <script type="text/javascript" src="js/lib/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/lib/d3.v3.min.js" charset="utf-8"></script>
         <script type="text/javascript" src="js/lib/topojson.min.js" charset="utf-8"></script>
