Map interaction / zoom, resize
* Updated projection scale + viewBox for svg > responsivity
* Added zoom behaviour
* Added transform var so that last zoom is remembered
* Updated width and height var on resize

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="stylesheet" type="text/css" href="css/menu.css">
-        <link rel="stylesheet" href="js/lib/jquery-ui-1.11.4.custom/jquery-ui.css">
+        <!-- <link rel="stylesheet" href="js/lib/jquery-ui-1.11.4.custom/jquery-ui.css"> -->
 
         <script type="text/javascript" src="js/lib/jquery-1.11.3.min.js"></script>
+        <!-- // <script src="https://d3js.org/d3.v4.min.js"></script> -->
         <!-- I need 2.2.1  in order to make my custom events work -->
         <script type="text/javascript" src="js/lib/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/lib/d3.v3.min.js" charset="utf-8"></script>
@@ -23,6 +24,7 @@ and open the template in the editor.
         <script type="text/javascript" src="js/menu.js"></script>
     </head>
     <body>
+
         <div id="geo-menu">
         </div>
 
@@ -44,7 +46,7 @@ and open the template in the editor.
             </div>
 
         </div> -->
-        
+
         <script type="text/javascript" src="js/test.js"></script>
 
 
