--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="css/menu.css">
         <!-- <link rel="stylesheet" href="js/lib/jquery-ui-1.11.4.custom/jquery-ui.css"> -->
 
-        <script type="text/javascript" src="js/lib/jquery-1.11.3.min.js"></script>
+        <!-- // <script type="text/javascript" src="js/lib/jquery-1.11.3.min.js"></script> -->
+        <script type="text/javascript" src="js/lib/jquery-2.2.1.min.js"></script>
         <!-- // <script src="https://d3js.org/d3.v4.min.js"></script> -->
         <!-- I need 2.2.1  in order to make my custom events work -->
         <script type="text/javascript" src="js/lib/jquery-ui.min.js"></script>
@@ -28,7 +29,7 @@ and open the template in the editor.
         <div id="geo-menu">
         </div>
 
-       <!--  <div style="padding: 10px">
+        <div style="padding: 10px">
             <div style="margin: 10px">
                 Zobraz IP adresy: <span id="test-div-radio-display"></span>
             </div>
@@ -45,7 +46,7 @@ and open the template in the editor.
                 Zobraz jména států: <span id="test-div-checkbox-showLabel"></span>
             </div>
 
-        </div> -->
+        </div>
 
         <script type="text/javascript" src="js/test.js"></script>
 
