test.js not used anymore (after successful testing)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ and open the template in the editor.
         <div id="geo-menu">
         </div>
 
-        <div style="padding: 10px">
+        <!-- <div style="padding: 10px">
             <div style="margin: 10px">
                 Zobraz IP adresy: <span id="test-div-radio-display"></span>
             </div>
@@ -46,7 +46,7 @@ and open the template in the editor.
                 Zobraz jména států: <span id="test-div-checkbox-showLabel"></span>
             </div>
 
-        </div>
+        </div> -->
 
         <script type="text/javascript" src="js/test.js"></script>
 
