--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ and open the template in the editor.
                 Zobraz jména států: <span id="test-div-checkbox-showLabel"></span>
             </div>
 
-        </div> -->
+        </div>
 
-        <script type="text/javascript" src="js/test.js"></script>
+        <script type="text/javascript" src="js/test.js"></script>  -->
 
 
         <script type="text/javascript" src="js/main.js"></script>
