Zakomentovaný pokus o nějakou křivku

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ and open the template in the editor.
         <!-- I need 2.2.1  in order to make my custom events work -->
         <script type="text/javascript" src="js/lib/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/lib/d3.v3.min.js" charset="utf-8"></script>
+        <script src="https://d3js.org/d3-shape.v1.min.js"></script>
+        <script src="https://d3js.org/d3-path.v1.min.js"></script>
         <script type="text/javascript" src="js/lib/topojson.min.js" charset="utf-8"></script>
         <script type="text/javascript" src="js/menu.js"></script>
     </head>
